frontend/test/should_fail/computations_if_else_001.grg
procedure foo(var x:int) : (int)
{
	else if(x==1) {
		return(1);
	} else {
		return(0);
	}
}


